# ExcelSiorBackend

./: .gitignore  Dockerfile  Makefile  Notas.txt  README_MEJORAS.md  RESUMEN_PRUEBAS_BPM.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  test_bpm_choices_validation.py  test_bpm_data.csv  test_bpm_endpoint_exhaustive.py  test_bpm_endpoint_final.py  test_bpm_invalid_data.csv  test_bpm_processor.py  test_bpm_processor_simple.py  test_csv_conversion.py  test_data_with_problems.csv  test_endpoint_direct.py  test_endpoint_final.py  test_endpoint_with_problems.py  test_flexible_validator_improved.py  test_ocr_implementation.py  test_results_bpm.json  test_results_bpm_final.json
config/: settings.py
repository/: README.md  __init__.py  example_usage.py  migration_guide.md
repository/processors/: __init__.py  consolidation_processor.py  csv_processor.py  excel_processor.py
repository/proyectos/: ABSTRACT_FACTORY_IMPLEMENTATION.md  EJEMPLO_USO.md  INTEGRACION_COMPLETA_MODULAR.md  MEJORA_IMPLEMENTADA.md  RESUMEN_ABSTRACT_FACTORY.md  ejemplo_uso_simple.py  factory.py  processor_factory.py  simple_csv_processor.py  unified_csv_processor.py  validators_config.py
repository/proyectos/BPM/: __init__.py  config.py  processor_bpm.py  transformar_columnas_bpm.py
repository/proyectos/BPM/validadores/: __init__.py  validadores_bpm.py
repository/proyectos/COLJUEGOS/: config.py
repository/proyectos/COLJUEGOS/disciplinarios/: INTEGRACION_MODULAR.md  transformar_columnas_disciplinarios_col.py
repository/proyectos/DIAN/: config.py
repository/proyectos/DIAN/PQR/: transformar_columnas_pqr_muisca.py
repository/proyectos/DIAN/disciplinarios/: transformar_columnas_disciplinarios.py
repository/proyectos/DIAN/disciplinarios/validadores/: validadores_disciplinarios.py
repository/proyectos/DIAN/disciplinarios/valores_choice/: ciudad.py  departamento.py  direccion_seccional.py
repository/proyectos/DIAN/notificaciones/: configuracion_json.txt  debug_columnas.py  transformar_columnas_dian_notifiaciones_mejorado.py
repository/proyectos/DIAN/notificaciones/validadores/: RESUMEN_VALIDADORES.md  ejemplo_uso_validadores_numericos.py  validadores_dian_notificaciones.py
repository/proyectos/DIAN/notificaciones/valores_choices/: codigo_dependencia_mapping.py
repository/proyectos/UGPP/: config.py
repository/proyectos/base/: __init__.py  config_base.py  validators.py  values_manager.py
repository/transformers/: __init__.py  encoding_transformer.py  format_transformer.py
routes/: README.md  __init__.py  consolidacion.py  conversion.py  conversion_backup_ocr.py  conversion_old.py  csv_analyzer.py  csv_analyzer_ui.py  dynamic_types.py  normalizacion.py  ocr_endpoint.py  pdf_endpoint_ocr.py
scripts/: setup.sh
services/: file_processor.py
templates/: csv_analyzer_modal.html  csv_analyzer_widget.html
tests/: test_abstract_factory.py  test_csv_analyzer.py  test_modular_system.py  test_txt_conversion.py  test_validators.py
utils/: column_cleaner.py  csv_separator_detector.py  dynamic_data_types.py  exceptions.py  logger.py  validators.py
